--- a/CSS/samplebgcolor.css
+++ b/CSS/samplebgcolor.css
@@ -3,6 +3,7 @@
 <body>
 
 <h1 style="background-color:DodgerBlue;">Hello World</h1>
+<h2>sanket</h2>
 
 <p style="background-color:Tomato;">
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
